// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Message /> > renders as expected based on provided props 1`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    >
      <h3
        class="text-center text-gray-500 dark:text-gray-400"
      />
    </div>
  </div>
</div>
`;

exports[`<Message /> > renders as expected based on provided props 2`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    >
      <h3
        class="text-center text-gray-500 dark:text-gray-400"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-notch fa-spin "
          data-icon="circle-notch"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
            fill="currentColor"
          />
        </svg>
        <span
          class="ml-2"
        >
          Loading...
        </span>
      </h3>
    </div>
  </div>
</div>
`;

exports[`<Message /> > renders as expected based on provided props 3`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    >
      <h3
        class="text-center text-gray-500 dark:text-gray-400"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-circle-notch fa-spin "
          data-icon="circle-notch"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M222.7 32.1c5 16.9-4.6 34.8-21.5 39.8C121.8 95.6 64 169.1 64 256c0 106 86 192 192 192s192-86 192-192c0-86.9-57.8-160.4-137.1-184.1c-16.9-5-26.6-22.9-21.5-39.8s22.9-26.6 39.8-21.5C434.9 42.1 512 140 512 256c0 141.4-114.6 256-256 256S0 397.4 0 256C0 140 77.1 42.1 182.9 10.6c16.9-5 34.8 4.6 39.8 21.5z"
            fill="currentColor"
          />
        </svg>
        <span
          class="ml-2"
        >
          Alternative content
        </span>
      </h3>
    </div>
  </div>
</div>
`;

exports[`<Message /> > renders as expected based on provided props 4`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary"
  >
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    >
      <h3
        class="text-center text-gray-500 dark:text-gray-400"
      >
        Default message
      </h3>
    </div>
  </div>
</div>
`;

exports[`<Message /> > renders as expected based on provided props 5`] = `
<div>
  <div
    class="group/card rounded-md shadow-md border border-lm-border dark:border-dm-border bg-lm-primary dark:bg-dm-primary [&]:border-danger"
  >
    <div
      class="p-4 bg-lm-primary dark:bg-dm-primary first:rounded-t-md first:rounded-t-md last:rounded-b-md"
    >
      <h3
        class="text-center text-danger"
      >
        Error message
      </h3>
    </div>
  </div>
</div>
`;
